# app/serializers/api/v1/course_index_serializer.rb
@@ -1,0 +1,7 @@
+module Api
+  module V1
+    class CourseIndexSerializer < ActiveModel::Serializer
+      attributes :id, :title, :author_id
+    end
+  end
+end
