# swagger/v1/swagger.yaml
@@ -1,12 +1,113 @@
 ---
 openapi: 3.0.1
 info:
-  title: API V1
+  title: Документация API V1
+  description: API тестового сервиса обучающих курсов
   version: v1
 paths:
+  "/api/v1/authors/{author_id}/courses":
+    parameters:
+    - name: author_id
+      in: path
+      required: true
+      description: Author ID
+      schema:
+        type: integer
+    get:
+      summary: Получить список курсов автора
+      tags:
+      - Курсы автора
+      responses:
+        '200':
+          description: Успешный запрос
+        '404':
+          description: Автор не найден
+    post:
+      summary: Добавить автору новый курс
+      tags:
+      - Курсы автора
+      parameters: []
+      responses:
+        '201':
+          description: Курс успешно создан
+        '422':
+          description: Некорректный запрос
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+              - title
+              - description
+              properties:
+                title:
+                  type: string
+                description:
+                  type: string
+                content:
+                  type: string
+  "/api/v1/authors/{author_id}/courses/{id}":
+    parameters:
+    - name: author_id
+      in: path
+      required: true
+      description: Author ID
+      schema:
+        type: integer
+    - name: id
+      in: path
+      required: true
+      description: Course ID
+      schema:
+        type: integer
+    get:
+      summary: Show a course
+      tags:
+      - Курсы автора
+      responses:
+        '200':
+          description: Успешный запрос
+        '404':
+          description: Автор или курс не найден
+    put:
+      summary: Обновить данные курса автора
+      tags:
+      - Курсы автора
+      parameters: []
+      responses:
+        '200':
+          description: Успешно обновлено
+        '422':
+          description: Недопустимый запрос
+        '404':
+          description: Курс не найден
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                description:
+                  type: string
+                content:
+                  type: string
+    delete:
+      summary: Удалить курс у автора
+      tags:
+      - Курсы автора
+      responses:
+        '204':
+          description: Успешно удалено
+        '404':
+          description: Курс не найден
   "/api/v1/authors":
     get:
       summary: Список авторов
+      tags:
+      - Авторы
       parameters:
       - name: page
         in: query
@@ -19,6 +120,8 @@ paths:
           description: successful
     post:
       summary: Создать нового автора
+      tags:
+      - Авторы
       parameters: []
       responses:
         '201':
@@ -52,11 +155,16 @@ paths:
         type: string
     get:
       summary: Получить данные автора
+      tags:
+      - Авторы
+      description: Возвращает данные автора вместе с его курсами
       responses:
         '200':
           description: Успешно
     put:
       summary: Изменить данные автора
+      tags:
+      - Авторы
       parameters: []
       responses:
         '200':
@@ -79,6 +187,8 @@ paths:
               - email
     delete:
       summary: Удалить автора
+      tags:
+      - Авторы
       description: Прежде чем удалить указанного автора, находит случайного автора
         и назначает ему курсы удаляемого автора.
       responses:
@@ -87,6 +197,66 @@ paths:
             ответа.
         '500':
           description: Не удалось найти замену автора.
+  "/api/v1/courses/{course_id}/skills":
+    parameters:
+    - name: course_id
+      in: path
+      description: ID of the course
+      required: true
+      schema:
+        type: string
+    get:
+      summary: Получить список компетенций курса
+      tags:
+      - Компетенции курса
+      responses:
+        '200':
+          description: successful
+    post:
+      summary: Создание компетенции для курса
+      tags:
+      - Компетенции курса
+      parameters: []
+      responses:
+        '201':
+          description: skill created
+        '422':
+          description: invalid request
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+              required:
+              - name
+  "/api/v1/courses/{course_id}/skills/{skill_id}":
+    parameters:
+    - name: course_id
+      in: path
+      description: ID of the course
+      required: true
+      schema:
+        type: string
+    - name: skill_id
+      in: path
+      description: ID of the skill
+      required: true
+      schema:
+        type: string
+    delete:
+      summary: Deltes a skill for a course
+      tags:
+      - Компетенции курса
+      responses:
+        '204':
+          description: skill deleted
+        '404':
+          description: skill not found
 servers:
 - url: http://localhost:3000
   variables: {}
